--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,42 @@
 
 html {
   box-sizing: border-box;
+  font-family: sans-serif;
+  color: #2f2d13;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+header {
+  background-color: #e2e2e2;
+}
+
+h1 {
+  margin: 0;
+  text-align: center;
+}
+
+li {
+  display: inline;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  padding: .2em .5em .3em;
+  border-radius: 3px;
+  font-size: 1.125rem;
+  color: #0074d9;
+  display: inline-block;
+}
+
+a:hover {
+  background-color: #0074d9;
+  color: #fff;
 }
